<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/total_expenses_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Total Expenses: $0.00"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/add_expense_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Add_an_expense"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/expense_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/Expense_name" />

        <EditText
            android:id="@+id/expense_price_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:hint="@string/Expense_value" />
    </LinearLayout>

    <Button
        android:id="@+id/add_expense_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Add_Expense" />

    <ListView
        android:id="@+id/expenses_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>